<resources>
    <string name="app_name">Fluxo Caixa</string>
    <string name="tipo">Tipo:</string>
    <string name="detalhe">Detalhe:</string>
    <string name="valor">Valor:</string>
    <string name="_0_00">0,00</string>
    <string name="data_lan">Data Lanç.:</string>
    <string name="dd_mm_aaaa">dd/MM/aaaa</string>
    <string name="lancar">Lançar</string>
    <string name="ver_lancamentos">Ver Lançamentos</string>
    <string name="saldo">Saldo</string>
</resources>